<resources>
    <string name="app_id">829607533789</string>
    <string name="app_name">Spider Gomoku</string>
    <string name="gomoku">Now with less spiders!</string>
    <string name="players">Players</string>
    <string name="_1_player">1 Player</string>
    <string name="_2_player">2 Player</string>
    <string name="board_size">Board Size</string>
    <string name="_10_x_10">10 x 10</string>
    <string name="_15_x_15">15 x 15</string>
    <string name="_20_x_20">20 x 20</string>
    <string name="game_mode">Game Mode</string>
    <string name="standard">Standard</string>
    <string name="freestyle">Freestyle</string>
    <string name="play">Play</string>
    <string name="resetButton">Reset</string>
    <string name="winner"></string>
    <string name="currentPlayer">Current Player: </string>
    <string name="wins">White Wins: 0, Black Wins: 0, Ties: 0 </string>

    <string name="title_activity_board">BoardActivity</string>

</resources>


