<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:visibility="visible">

    <Button
        android:id="@+id/resetButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/resetButton"
        android:onClick="onResetClick"/>

    <TextView
        android:id="@+id/winner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/winner" />

    <TextView
        android:id="@+id/currentPlayer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/currentPlayer"/>

    <TextView
        android:id="@+id/wins"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/wins" />

    <LinearLayout
        android:id="@+id/Board"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:visibility="visible">

    </LinearLayout>

</LinearLayout>

